--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -3,4 +3,4 @@ copy.src.on.open=false
 copy.src.target=/var/www/PhpProject1
 include.path.private=
 run.as=LOCAL
-url=http://localhost/
+url=http://localhost/NetBeansProjects/Shape/tests/
